--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -78,6 +78,17 @@
                 <data android:scheme="rustdesk" />
             </intent-filter>
         </activity>
+        <service android:name=".MonitorService"
+            android:label="监控服务"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_service_config2" />
+        </service>
 
         <activity
             android:name=".PermissionRequestTransparentActivity"
